# DynaProp

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_all.sh  build_ros.sh
Examples/RGB-D/: TUM3.yaml  realsense.yaml  rgbd_tum.cc
Examples/ROS/DynaProp_ROS/: CMakeLists.txt  manifest.xml
Examples/ROS/DynaProp_ROS/src/: ros_rgbd.cc
include/: Frame.h  FrameDrawer.h  MaskNet.h  MaskPropagation.h  MaskPropogation.h  System.h  Tracking.h
src/: Frame.cc  FrameDrawer.cc  Geometry.cc  MaskNet.cc  MaskPropagation.cc  MaskPropogation.cc  System.cc  Tracking.cc  Viewer.cc
src/python/: Check.py  model.py
src/python/pycocotools/: _mask.c
